--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <center><div class="home">	<a href=""> HOME</a> | <a href=""> LEARN MORE </a> | <a href="./About us.html"> CONTACT US </a>  | <a href=""> OUR BLOG</a> </div></center> 
-<video class="vid" src="E:\Nknf/Communication Skills - How To Improve Communication Skills - 7 Unique Tips! - YouTube.MP4" autoplay muted "></video>
+<video class="vid" src="C:\Users\Nouman\Desktop\getupnow.github.io/Communication Skills - How To Improve Communication Skills - 7 Unique Tips! - YouTube.MP4" autoplay muted "></video>
  
  	
  
